test/tests/stages/18_structures/invalid_types/extra_credit/other_features/compound_assign_to_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(10)
  }
  ;
  identifier(x)
  +=
  const int(10)
  ;
  return
  const int(0)
  ;
  }
